[package]
name = "mycelium-memory-db"
description = "Provide memory database adapters to the mycelium project."

version = "8.2.1"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

http.workspace = true
serde.workspace = true
shaku.workspace = true
tracing.workspace = true
uuid.workspace = true
wildmatch.workspace = true

async-trait = "0.1"

# ------------------------------------------------------------------------------
# Mycelium packages
# ------------------------------------------------------------------------------

myc-core.workspace = true
mycelium-base.workspace = true
mycelium-config.workspace = true

# ------------------------------------------------------------------------------
# Dev dependencies
# ------------------------------------------------------------------------------


[lib]
name = "myc_mem_db"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
