[package]
name = "mycelium-notifier"
description = "Provide message adapters to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

myc-core = { version = "7.13.3", path = "../../core" }
mycelium-base = { version = "7.13.3", path = "../../base" }
mycelium-config = { version = "7.13.3", path = "../../config" }
mycelium-adapters-shared-lib = { version = "7.13.3", path = "../shared" }

async-trait.workspace = true
chrono.workspace = true
lazy_static.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true
tracing.workspace = true
uuid.workspace = true

lettre = "0.10.4"


[dev-dependencies]
tokio.workspace = true

[lib]
name = "myc_notifier"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
