[package]
name = "mycelium-notifier"
description = "Provide message adapters to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

async-trait.workspace = true
chrono.workspace = true
lazy_static.workspace = true
lettre.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true
tracing.workspace = true
uuid.workspace = true

# ------------------------------------------------------------------------------
# Mycelium packages
# ------------------------------------------------------------------------------

myc-core.workspace = true
mycelium-base.workspace = true
mycelium-config.workspace = true
mycelium-adapters-shared-lib.workspace = true

# ------------------------------------------------------------------------------
# Dev dependencies
# ------------------------------------------------------------------------------

[dev-dependencies]
tokio.workspace = true

# ------------------------------------------------------------------------------
# Library
# ------------------------------------------------------------------------------

[lib]
name = "myc_notifier"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
