[package]
name = "mycelium-prisma"
version = "4.3.0"
edition = "2021"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
license = "Apache-2.0"
description = "Provide prisma adapters to the mycelium project."
repository = "https://github.com/sgelias/mycelium"
readme = "./README.md"
keywords = ["authorization", "identity", "permission", "keeper"]
categories = ["http-client", "microservices"]

[dependencies]

mycelium-config = { path = "../../config" }

async-trait = "0.1"
chrono = "0.4"
clean-base = "1.2"
env_logger = "0.10"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4", "serde", "fast-rng"] }

[dependencies.myc-core]
path = "../../core"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.8"
default-features = false
features = ["postgresql", "mocking"]

[dependencies.prisma-client-rust-cli]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.8"
default-features = false
features = ["postgresql", "mocking"]

[lib]
name = "myc_prisma"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "myc-prisma-cli"
path = "src/main.rs"
