[package]
name = "mycelium-prisma"
description = "Provide prisma adapters to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

mycelium-config.workspace = true
clean-base.workspace = true
myc-core.workspace = true
env_logger.workspace = true
log.workspace = true

async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4", "serde", "fast-rng"] }


[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.8"
default-features = false
features = ["postgresql", "mocking"]

[dependencies.prisma-client-rust-cli]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.8"
default-features = false
features = ["postgresql", "mocking"]

[lib]
name = "myc_prisma"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "myc-prisma-cli"
path = "src/main.rs"
