[package]
name = "mycelium-prisma"
description = "Provide prisma adapters to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

myc-core = { version = "6.5.0", path = "../../core" }
mycelium-base = { version = "6.5.0", path = "../../base" }
mycelium-config = { version = "6.5.0", path = "../../config" }

async-trait.workspace = true
chrono.workspace = true
env_logger.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true


[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.11"
default-features = false
features = ["postgresql", "mocking"]

[dependencies.prisma-client-rust-cli]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.11"
default-features = false
features = ["postgresql", "mocking"]

[lib]
name = "myc_prisma"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "myc-prisma-cli"
path = "src/main.rs"
