[package]
name = "mycelium-redis"
version = "0.10.4"
edition = "2021"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
license = "Apache-2.0"
description = "Provide redis adapters to the mycelium project."
repository = "https://github.com/sgelias/mycelium"
readme = "./README.md"
keywords = ["authorization", "identity", "permission", "keeper"]
categories = ["http-client", "microservices"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clean-base = "0.3"
env_logger = "0.10"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
redis = "0.22.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4", "serde", "fast-rng"] }

[dependencies.myc-core]
path = "../../core"

[dev-dependencies]
test-log = "0.2.8"

[lib]
name = "myc_redis"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
