[package]
name = "mycelium-redis"
version = "4.1.1"
edition = "2021"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
license = "Apache-2.0"
description = "Provide redis adapters to the mycelium project."
repository = "https://github.com/sgelias/mycelium"
readme = "./README.md"
keywords = ["authorization", "identity", "permission", "keeper"]
categories = ["http-client", "microservices"]

[dependencies]

mycelium-config = { path = "../../config" }

async-trait = "0.1"
clean-base = "1.0"
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = "0.12"
futures = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"

[dependencies.myc-core]
path = "../../core"

[lib]
name = "myc_redis"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
