[package]
name = "mycelium-service"
description = "Provide smtp adapters to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

myc-core = { version = "8.0.0", path = "../../core" }
mycelium-base = { version = "8.0.0", path = "../../base" }

async-trait.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true
tracing.workspace = true

[lib]
name = "myc_svc"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
