[package]
name = "mycelium-service"
description = "Provide smtp adapters to the mycelium project."

version = "8.3.0+beta"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

async-trait.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true
tracing.workspace = true


# ------------------------------------------------------------------------------
# Mycelium packages
# ------------------------------------------------------------------------------

myc-core.workspace = true
mycelium-base.workspace = true


# ------------------------------------------------------------------------------
# Library
# ------------------------------------------------------------------------------

[lib]
name = "myc_svc"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
