[package]
name = "mycelium-adapters-shared-lib"
description = "Shared library for the mycelium adapters layer."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

redis.workspace = true
serde.workspace = true
shaku.workspace = true
tracing.workspace = true


# ------------------------------------------------------------------------------
# Mycelium packages
# ------------------------------------------------------------------------------

myc-core.workspace = true
mycelium-base.workspace = true
mycelium-config.workspace = true

# ------------------------------------------------------------------------------
# Library
# ------------------------------------------------------------------------------

[lib]
name = "myc_adapters_shared_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
