[package]
name = "mycelium-smtp"
description = "Provide smtp adapters to the mycelium project."

edition = { workspace = true }
authors = { workspace = true }
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }


[dependencies]

myc-core = { workspace = true }
mycelium-config = { workspace = true }
clean-base = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

async-trait = "0.1"
lazy_static = "1.4"
lettre = "0.10.4"
minijinja = "1.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"


[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "myc_smtp"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
