[package]
name = "mycelium-smtp"
description = "Provide smtp adapters to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

async-trait.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
log.workspace = true
myc-core.workspace = true
mycelium-config.workspace = true
mycelium-base.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true

lettre = "0.10.4"
minijinja = "1.0.8"


[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "myc_smtp"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
