[package]
name = "mycelium-smtp"
description = "Provide smtp adapters to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

myc-core = { version = "4.15.1", path = "../../core" }
mycelium-base = { version = "4.15.1", path = "../../base" }
mycelium-config = { version = "4.15.1", path = "../../config" }

async-trait.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true

lettre = "0.10.4"
minijinja = "1.0.8"


[dev-dependencies]
tokio.workspace = true

[lib]
name = "myc_smtp"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
