[package]
name = "mycelium-base"
description = "A simple package with useful dependencies for Rust packages."

version = "8.2.2-beta.1"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]

regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
utoipa.workspace = true
