[package]
name = "mycelium-api-test-svc"
description = "Mycelium API Test Service"

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

# ? ---------------------------------------------------------------------------
# ? DEPENDENCIES
# ? ---------------------------------------------------------------------------

[dependencies]
anyhow = "1.0"
mycelium-http-tools = { version = "8.1.1-rc.4", path = "../../lib/http_tools" }

actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
utoipa.workspace = true
utoipa-redoc.workspace = true
utoipa-swagger-ui.workspace = true

# ? ---------------------------------------------------------------------------
# ? BINARIES
# ? ---------------------------------------------------------------------------

[[bin]]
name = "myc-api-test-svc"
path = "src/main.rs"
