[package]
name = "mycelium-service"
version = "0.8.0"
edition = "2021"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
license = "Apache-2.0"
description = "Provide redis adapters to the mycelium project."
repository = "https://github.com/sgelias/mycelium"
readme = "./README.md"
keywords = ["authorization", "identity", "permission", "keeper"]
categories = ["http-client", "microservices"]

[dependencies]
async-trait = "0.1"
clean-base = "0.2.1"
lazy_static = "1.4"
log = "0.4"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4", "serde", "fast-rng"] }

[dependencies.myc-core]
path = "../../../core"

[lib]
name = "myc_svc"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
