[package]
name = "mycelium-prisma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mycelium-core = { path = "../../../core" }

async-trait = "0.1"
clean-base = "0.1"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"

[lib]
name = "myc_smtp"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
